Created an alternative for the horrible TMessage